@@ -1,0 +1,4 @@
+﻿
+remote := RemoteHost new: 'localhost' with: 20000 with: 'Server2000'
+!
+
