@@ -1,0 +1,4 @@
+﻿
+host := Host new: @AjTalk.Machine !!current with: 20000 with: 'Server2000'
+!
+
