@@ -1,0 +1,3 @@
+﻿"Transcript provisory definition"
+
+Transcript := @System.Console out!
